<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Tab 1"
        android:textAppearance="?android:attr/textAppearanceLarge"/-->

    <!--body-->
        <TextView
        android:id="@+id/project_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/project_label"
        android:textColor="@color/color_Red"
        android:textSize="24sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/project_value"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/location_label"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/location"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"
        android:spinnerMode="dropdown"

        android:layout_below="@+id/project_value"
        android:layout_alignRight="@+id/search_btn"
        android:layout_toEndOf="@+id/location_label"
        android:layout_toRightOf="@+id/location_label"
        android:hint="@string/location_hint"
        android:textSize="18dp"/>
    <!--body-->

</RelativeLayout>